--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
