improve navbar, footer and homepage

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb://localhost:27017/frozen-food-business"
+MONGO_URI=mongodb+srv://sunkariavaibhav:In%40zum%4028071997@cluster0.t8zx9ej.mongodb.net/frozen_food_db?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret
 LINE_PAY_CHANNEL_ID=your_line_pay_channel_id
 LINE_PAY_CHANNEL_SECRET=your_line_pay_channel_secret
